# file_monitor

./: .gitignore  Cargo.toml  README.md  file_monitor.db  monitor.example.toml  monitor.toml
src/: main.rs
